# NaiveBayes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cleanup.sh  compose.yaml
src/: main.rs  naive_bayes.rs  utils.rs
