[package]
name = "NaiveBayes"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
extractous = "0.3.0"
actix-web = "4"
futures-util = "0.3.31"
actix-multipart = "0.7.2"
serde_json = "1.0.137"
bincode = "1.3.3"
